Add final tuch to the UI

--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,16 @@
   left: 0;
   right: 0;
   text-align: center;
-  background: gray;
+  background: rgba(128, 128, 128, 0.308);
   width: 50%;
   height: fit-content;
   margin: auto;
   padding: 10px;
 }
-
+.todo-title{
+  font-size: 60px;
+  color: gray;
+}
 .App-body{
 
   height: fit-content;
@@ -27,7 +30,10 @@
 #task{
   width: 80%;
   height: 88%;
+  border: unset;
+  outline: unset;
 
+  border-radius: 15px;
 
 }
 .list{
@@ -38,22 +44,30 @@
   display: flex;
   justify-content: space-between;
   height: 2rem;
-  background: rgb(76, 33, 33);
+  background:white;
   margin: auto;
+  border-radius: 15px;
 
 }
 .task-list{
   width: 100%;
   height: 2rem;
-  background: white;
+  background: #f0efef;
   justify-content: space-between;
+
 
   margin: auto;
 
 
 }
 .list-container{
-
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
   padding-left: 0px;
+}
+button{
+  border: unset;
+  background: unset;
 }
 
